# unsplash-stats

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  repository.yaml
homeassistant-addon/unsplash_stats_dashboard/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
homeassistant-addon/unsplash_stats_dashboard/unsplash_stats/: api.py  cli.py  dashboard.py  db.py
tests/: test_dashboard_callbacks.py
unsplash_stats/: __init__.py  api.py  cli.py  collector.py  dashboard.py  exporters.py  wsgi.py
