[project]
name = "unsplash-stats"
version = "0.1.1"
description = "Point-in-time Unsplash stats collector for SQLite + CSV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.18.2",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]

[tool.uv]
package = false
